force-app/main/default/objects/Student__c/fields/Barcode_Value__c.field-meta.xml
<CustomField>
    <fullName>Barcode_Value__c</fullName>
    <description>the string encoded in the QR code</description>
    <label>Barcode Value</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>