force-app/main/default/objects/Student__c/fields/Club_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Club_Fee_Paid__c</fullName>
    <description>One-time pass fee paid by a student for attending any clubs or meetings during their 4 years.</description>
    <inlineHelpText>₹2,000</inlineHelpText>
    <label>Club Fee Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>