force-app/main/default/objects/Student__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronics and Communication Engineering</fullName>
            </value>
            <value>
                <fullName>Computer Science and Engineering</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence and Machine Learning (AI &amp; ML)</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence (AI)</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Electrical and Electronics Engineering</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>