force-app/main/default/objects/Student__c/fields/Department_Display__c.field-meta.xml
<CustomField>
    <fullName>Department_Display__c</fullName>
    <description>for report creation for department wise</description>
    <formula>IF(
    $RecordType.Name = &quot;Others&quot;,
    Department_Name__c,
    TEXT(Department__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Display</label>
    <type>Text</type>
</CustomField>