force-app/main/default/objects/Student__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>1</length>
    <type>Text</type>
</CustomField>