force-app/main/default/objects/Student__c/recordTypes/Student_Branch.recordType-meta.xml
<RecordType>
    <fullName>Student_Branch</fullName>
    <active>true</active>
    <label>Student Branch</label>
</RecordType>