force-app/main/default/objects/Student__c/validationRules/Require_Department_Name_For_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Department_Name_For_Others</fullName>
    <active>true</active>
    <description>$RecordType.Name = &quot;Others&quot; → only applies when the record type is “Others”.
ISBLANK(TEXT(Department_Name__c)) → checks if Department Name (Text) is empty.</description>
    <errorConditionFormula>AND(
    $RecordType.Name = &quot;Others&quot;,
    ISBLANK(Department_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Department_Name__c</errorDisplayField>
    <errorMessage>Department Name is required for Others record type.</errorMessage>
</ValidationRule>