force-app/main/default/objects/Student__c/listViews/Student_List.listView-meta.xml
<ListView>
    <fullName>Student_List</fullName>
    <columns>NAME</columns>
    <columns>Student_ID__c</columns>
    <columns>Barcode_Value__c</columns>
    <columns>Email__c</columns>
    <columns>Department__c</columns>
    <columns>Department_Name__c</columns>
    <columns>Section__c</columns>
    <filterScope>Mine</filterScope>
    <label>Student List</label>
</ListView>